<resources>
    <string name="app_name">Chess</string>
    <string name="main_menu">Main Menu</string>
    <string name="new_game">New Game</string>
    <string name="recorded_games">Recorded Games</string>
    <string name="returnString">Return</string>
    <string name="resign">Resign</string>
    <string name="draw">Draw</string>
    <string name="ai">AI</string>
    <string name="undo">Undo</string>
    <string name="next_move">Next move</string>
    <string name="previous_move">Prev move</string>
    <string name="mode">Mode</string>
    <string name="white">White</string>
    <string name="play">Play</string>
    <string name="game_settings">Game Settings</string>
    <string name="player_vs_computer">Player vs Computer</string>
    <string name="replay">Replay</string>

    <string-array name="gameSortChoices">
        <item>Name</item>
        <item>Date</item>
    </string-array>

    <string-array name="modeChoices">
        <item>2 Players</item>
        <item>1 Player</item>
    </string-array>

    <string-array name="whiteChoices">
        <item>Player</item>
        <item>Computer</item>
    </string-array>

    <integer-array name="piece_imgs">
        <item>@drawable/bishop_black</item>
        <item>@drawable/bishop_white</item>
        <item>@drawable/king_black</item>
        <item>@drawable/king_white</item>
        <item>@drawable/knight_black</item>
        <item>@drawable/knight_white</item>
        <item>@drawable/pawn_black</item>
        <item>@drawable/pawn_white</item>
        <item>@drawable/queen_black</item>
        <item>@drawable/queen_white</item>
        <item>@drawable/rook_black</item>
        <item>@drawable/rook_white</item>
    </integer-array>
</resources>
