<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ReplayGameActivity">
    <Button
        android:id="@+id/button_replayGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="launchRecordedGamesScreen"
        android:text="@string/returnString"
        style="?android:attr/borderlessButtonStyle"/>
    <TextView
        android:id="@+id/replayHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        android:textSize="24sp"
        android:paddingHorizontal="10dp"
        android:layout_below="@+id/button_replayGame"/>
    <GridView
        android:id="@+id/chessboard_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="8"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:layout_below="@id/replayHeader"
        android:layout_centerInParent="true">
    </GridView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/chessboard_replay">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="prevMove"
            android:text="@string/previous_move"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nextMove"
            android:text="@string/next_move"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</RelativeLayout>