<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MenuActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_above="@id/buttons"
        android:text="@string/main_menu"
        android:textSize="24sp"/>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginHorizontal="30dp"
            android:onClick="launchPregameScreen"
            android:text="@string/new_game" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginHorizontal="30dp"
            android:onClick="launchRecordedGamesScreen"
            android:text="@string/recorded_games" />
    </LinearLayout>
</RelativeLayout>