<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PVCGameActivity">
    <TextView
        android:id="@+id/pvcHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_vs_computer"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="10dp"/>

    <Button
        android:id="@+id/button_pvc_resign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pvcHeader"
        android:onClick="resign"
        android:text="@string/resign"
        style="?android:attr/borderlessButtonStyle"/>
    <GridView
        android:id="@+id/pvc_chessboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="8"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:layout_below="@id/button_pvc_resign"
        android:layout_centerInParent="true">
    </GridView>

    <Button
        android:id="@+id/button_pvc_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pvc_chessboard"
        android:onClick="undoMove"
        android:text="@string/undo"
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>
