<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GameActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_resign"
                android:layout_width="78dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:onClick="resign"
                android:text="@string/resign" />
            <Button
                android:id="@+id/button_draw"
                android:layout_width="78dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:onClick="draw"
                android:text="@string/draw" />
        </LinearLayout>
        <GridView
            android:id="@+id/chessboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numColumns="8"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp"
            android:layout_gravity="center_horizontal">
        </GridView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_ai"
                android:layout_width="78dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:onClick="aiMove"
                android:text="@string/ai" />
            <Button
                android:id="@+id/button_undo"
                android:layout_width="78dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:onClick="undoMove"
                android:text="@string/undo" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>